# pomelo-pw

./: .gitignore  CHANGELOG.md  Makefile  README.md  README.zh-CN.md  TODO.md  pyproject.toml
.claude/skills/pomelo-pw/: skill.json  skill.md  templates.md
docs/: DESIGN.md
flows/: example-explorer-usage.md  example-js-eval.yaml  example.yaml  test-baseline-diff.yaml  test-conditional-loop-combined.yaml  test-conditional.yaml  test-data-driven.yaml  test-error-context.yaml  test-load-state.yaml  test-loop.yaml  test-retry.yaml  test-save-state.yaml  test-wait-enhanced.yaml
scripts/: .env.example  sync.py
src/pomelo_pw/: __init__.py  cli.py  error_context.py  executor.py  explorer.py  recorder.py  substitution.py
src/pomelo_pw/config/: __init__.py  settings.py
src/pomelo_pw/steps/: __init__.py  base.py  check.py  click.py  conditional.py  evaluate.py  fill.py  hover.py  load_state.py  loop.py  navigate.py  press.py  save_state.py  screenshot.py  scroll.py  select.py  set_viewport.py  type.py  uncheck.py  wait.py
tests/: conftest.py  test_conditional.py  test_config.py  test_data_driven.py  test_error_context.py  test_executor.py  test_executor_control_flow.py  test_loop.py  test_steps.py  test_substitution.py
